// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseText should render disabled text with a div tag in an accent variant when the variant prop equals accent, a valid accent prop is passed, and the disabled prop equals true 1`] = `
<div
  className="text text--accent text--azure text--disabled kKyETs"
  disabled={true}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render disabled text with a div tag in the dark variant when the disabled prop equals true 1`] = `
<div
  className="text text--dark text--disabled glmlXg"
  disabled={true}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render disabled text with a div tag in the light variant when the variant prop equals light and the disabled prop equals true 1`] = `
<div
  className="text text--light text--disabled eOhfnK"
  disabled={true}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render primary text with a div tag in an accent variant that has only one shade when the variant prop equals accent and a valid accent prop is passed 1`] = `
<div
  className="text text--accent text--aquamarine gURYUM"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render primary text with a div tag in an accent variant when the variant prop equals accent and a valid accent prop is passed 1`] = `
<div
  className="text text--accent text--azure lIbpq"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render primary text with a div tag in the dark variant by default 1`] = `
<div
  className="text text--dark text--primary ixExqb"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render primary text with a div tag in the dark variant with a className prop when passed by default 1`] = `
<div
  className="text text--dark text--primary text--custom ixExqb"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render primary text with a div tag in the light variant when the variant prop equals light 1`] = `
<div
  className="text text--light text--primary eUaRKn"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render primary text with a div tag of the size prop passed in the dark variant by default 1`] = `
<div
  className="text text--dark text--primary gGgKOz"
  disabled={false}
  size={
    Object {
      "large": "giga",
      "medium": "giga",
      "small": "giga",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render primary text with a div tag of the weight prop passed in the dark variant by default 1`] = `
<div
  className="text text--dark text--primary gQyGQj"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render primary text with a tag prop in the dark variant by default 1`] = `
<span
  className="text text--dark text--primary ixExqb"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</span>
`;

exports[`BaseText should render secondary text with a div tag in an accent variant when the variant prop equals accent, a valid accent prop is passed, and the secondary prop equals true 1`] = `
<div
  className="text text--accent text--azure text--secondary hCFVCQ"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render secondary text with a div tag in the dark variant when the secondary prop equals true 1`] = `
<div
  className="text text--dark text--secondary fRMqFP"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;

exports[`BaseText should render secondary text with a div tag in the light variant when the variant prop equals light and the secondary prop equals true 1`] = `
<div
  className="text text--light text--secondary gDFIZu"
  disabled={false}
  size={
    Object {
      "large": "hecto",
      "medium": "hecto",
      "small": "hecto",
    }
  }
>
  Text
</div>
`;
